make repo compatible with JDK 17 and add instruction to run